# crowdsourcing

./: .gitignore  .releaserc.json  CHANGELOG.md  README.md  _config.yml  archive_config.yaml  meta_config.yaml  meta_runner.py  process_issues.py  pyproject.toml  requirements.txt  safe_list.yaml  whitelist.txt
.github/: CODEOWNERS
.github/workflows/: archive_reports.yaml  issues_manager.yaml  pages.yml  release.yml  tests.yaml
crowdsourcing/: __init__.py  archive_manager.py  archive_reports.py  meta_runner.py  process_issues.py  zenodo_utils.py
docs/: csv-conf-2025-speech-text.md  workflow.plantuml
docs/validation_reports/: index.html  index.json  validation_issue_13.html  validation_issue_14.html
scripts/: run_meta_process.py
test/: test_archive_manager.py  test_archive_reports.py  test_meta_runner.py  test_process_issues.py
test/coverage/: .coveragerc
