[tool.poetry]
name = "crowdsourcing"
version = "1.0.2"
description = "A GitHub bot that automatically validates and processes OpenCitations data deposits submitted via issues. It uses the oc_validator library to check syntax and format, labels issues based on validation results, and manages monthly ingestion into CROCI and OpenCitations Meta with Zenodo integration for provenance tracking"
authors = ["arcangelo7 <arcangelomas@gmail.com>"]
license = "ISC License"
readme = "README.md"
packages = [{include = "crowdsourcing"}]

[tool.poetry.dependencies]
python = "<3.14,>=3.10"
oc-ds-converter = "^1.0.4"
pandas = "^2.2.3"
requests = "^2.32.3"
oc-validator = "^0.3.3"
oc-meta = "^2.0.3"


[tool.poetry.group.dev.dependencies]
isort = "^6.0.0"
python-dotenv = "^1.0.1"
coverage = "^7.6.10"

[tool.poetry.scripts]
meta-process = "scripts.run_meta_process:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
